<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <artifactId>imageComp</artifactId>
    <groupId>novemberdobby.teamcity.imageComp</groupId>
    <version>1.0-SNAPSHOT</version>
  </parent>
  <artifactId>imageComp-server</artifactId>
  <packaging>jar</packaging>
  <dependencies>

    <dependency>
      <groupId>novemberdobby.teamcity.imageComp</groupId>
      <artifactId>imageComp-common</artifactId>
      <version>1.0-SNAPSHOT</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.jetbrains.teamcity</groupId>
      <artifactId>server-api</artifactId>
      <version>${teamcity-version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.jetbrains.teamcity</groupId>
      <artifactId>server-web-api</artifactId>
      <version>${teamcity-version}</version>
      <type>war</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.jetbrains.teamcity</groupId>
      <artifactId>tests-support</artifactId>
      <version>${teamcity-version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.6</version>
    </dependency>
    
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-exec</artifactId>
      <version>1.3</version>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
